# sciencesconf2prog

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
sciencesconf2prog/: builder.py  cli.py  pdf_renderer.py  templates.py
src/sciencesconf2prog/: __init__.py  __main__.py  builder.py  templates.py
